Add working razor Web page layout

--- a/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/Layout/NavMenu.razor
+++ b/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/Layout/NavMenu.razor
@@ -1,30 +1,47 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿<div class="top-row navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">SzkolenieTechniczne2.Cinema</a>
+        <a class="navbar-brand" href="/">🎬 CinemaApp</a>
     </div>
 </div>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+<div class="sidebar bg-light">
+    <nav class="flex-column p-3">
+        <NavLink class="nav-link mb-2" href="/" Match="NavLinkMatch.All">
+            🏠 Strona główna
+        </NavLink>
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
+        <NavLink class="nav-link mb-2" href="/movies">
+            🎥 Lista filmów
+        </NavLink>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+        <NavLink class="nav-link mb-2" href="/create-movie">
+            ➕ Dodaj nowy film
+        </NavLink>
+        <NavLink class="nav-link mb-2" href="/test-form">
+            ➕ Test
+        </NavLink>
     </nav>
 </div>
 
+<style>
+    .sidebar {
+        height: 100vh;
+        width: 250px;
+        position: fixed;
+        top: 56px; /* wysokość top-row */
+        left: 0;
+        overflow-x: hidden;
+        padding-top: 1rem;
+        border-right: 1px solid #ccc;
+    }
+
+    .nav-link {
+        font-size: 1.1rem;
+        color: #333;
+    }
+
+    .nav-link.active {
+        font-weight: bold;
+        color: #0d6efd;
+    }
+</style>
