--- a/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/Layout/MainLayout.razor
+++ b/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/Layout/MainLayout.razor
@@ -1,23 +1,28 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<div class="layout d-flex flex-column">
+    <div class="d-flex flex-grow-1">
+        <aside class="sidebar bg-light p-3">
+            <NavMenu />
+        </aside>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div class="main-area d-flex flex-column flex-grow-1">
+            <header class="navbar bg-dark text-white px-4">
+                <div class="container-fluid d-flex justify-content-between align-items-center">
+                    <h1 class="h3 m-0">🎬 CinemaApp</h1>
+                    <a href="/" class="text-white text-decoration-none">Strona główna</a>
+                </div>
+            </header>
+
+            <main class="content p-4 flex-grow-1">
+                @Body
+            </main>
         </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
+    </div>
 </div>
 
 <div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
+    Wystąpił błąd.
+    <a href="" class="reload">Odśwież</a>
     <a class="dismiss">🗙</a>
 </div>
