--- a/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/_Imports.razor
+++ b/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using SzkolenieTechniczne2.Cinema
 @using SzkolenieTechniczne2.Cinema.Components
+@using Microsoft.AspNetCore.Components.QuickGrid
