--- a/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/App.razor
+++ b/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/App.razor
@@ -7,9 +7,15 @@
     <base href="/" />
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
-    <link rel="stylesheet" href="SzkolenieTechniczne2.Cinema.styles.css" />
+    <link rel="stylesheet" href="SzkolenieTechniczne.Cinema2.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+
+    <link rel="stylesheet" href="cinema-style.css" />
+    <link href="css/quickgrid-tweaks.css" rel="stylesheet" />
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+      
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+      <HeadOutlet />
 </head>
 
 <body>
