--- a/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/Pages/Movies.razor
+++ b/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema/Components/Pages/Movies.razor
@@ -6,44 +6,42 @@
 @inject IMediator Mediator
 
 <h3>📽️ Lista filmów</h3>
-@if (MovieList is null) 
+
+@if (MovieList is null)
 {
     <p><em>Ładowanie danych...</em></p>
 }
-<!--Lista już istnieje, czy jest jakikolwiek obiekt-->
 else if (!MovieList.Any())
 {
     <p>Brak dostępnych filmów.</p>
 }
 else
 {
-    <QuickGrid TGridItem="MovieDto"
-        Items = "MovieList.AsQueryable()"
-        Class="table table-hover table-bordered table-striped align-middle text-center shadow-sm rounded"
-        Stripping ="true"
-        GridLines ="Both">
-    
-    <PropertyColumn TGridItem="MovieDto" TProp ="long" Property="m=>m.Id" Title="ID" />
-    <PropertyColumn TGridItem="MovieDto" TProp ="string" Property="m=>m.Name" Title="Nazwa filmu" />
+   <QuickGrid TGridItem="MovieDto"
+           Items="MovieList.AsQueryable()"
+           Class="table table-hover table-bordered table-striped align-middle text-center shadow-sm rounded"
+         
+           Striping="true"
+           GridLines="Both">
+    <PropertyColumn TGridItem="MovieDto" TProp="long" Property="m => m.Id" Title="ID" />
+    <PropertyColumn TGridItem="MovieDto" TProp="string" Property="m => m.Name" Title="Nazwa filmu" />
 
-    <TemplateColumn title="Akcje">
-
+          <TemplateColumn Title="Akcje">
         <TemplateContext>
-        @{
-            var movie = context;
-        }
-        <div class="d-flex justify-content-center gap-2">
-            <button class="btn btn-sm btn-primary" title="Edytuj">
-                <i class="bi bi-pencil"></i>
-            </button>
-            <button class="btn btn-sm btn-danger" title="Usun" @onclick="() => DeleteMovie(movie.Id)">
-                <i class="bi bi-trash"></i>
-            </button>
-            <button class="btn btn-sm btn-success" title="Szczegóły" @onclick="() => GoToDetails(movie.Id)">
-                <i class="bi bi-search"></i>
-            </button>
-        </div>
-
+            @{
+                var movie = context;
+            }
+            <div class="d-flex justify-content-center gap-2">
+                <button class="btn btn-sm btn-primary" title="Edytuj">
+                    <i class="bi bi-pencil"></i>
+                </button>
+                    <button class="btn btn-sm btn-danger" title="Usuń" @onclick="() => DeleteMovie(movie.Id)">
+                    <i class="bi bi-trash"></i>
+                </button>
+                    <button class="btn btn-sm btn-success" title="Szczegóły" @onclick="() => GoToDetails(movie.Id)">
+                    <i class="bi bi-search"></i>
+                </button>
+            </div>
         </TemplateContext>
     </TemplateColumn>
 </QuickGrid>
